--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vendx",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -35,6 +35,8 @@
     "dotenv": "^17.2.3",
     "ecpair": "^3.0.0",
     "electrum-cash": "^3.2.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "mnemonics": "^1.1.3",
