--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@types/lodash": "^4.17.23",
     "axios": "^1.13.4",
     "bchaddrjs": "^0.5.2",
     "bcryptjs": "^3.0.3",
@@ -38,6 +39,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "jose": "^6.1.3",
+    "lodash": "^4.17.23",
     "lucide-react": "^0.562.0",
     "mnemonics": "^1.1.3",
     "nanoid": "^5.1.6",
