--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vendx",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -23,6 +23,21 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-email/body": "^0.2.1",
+    "@react-email/button": "^0.2.1",
+    "@react-email/column": "^0.0.14",
+    "@react-email/components": "^1.0.6",
+    "@react-email/container": "^0.0.16",
+    "@react-email/head": "^0.0.13",
+    "@react-email/hr": "^0.0.12",
+    "@react-email/html": "^0.0.12",
+    "@react-email/img": "^0.0.12",
+    "@react-email/link": "^0.0.13",
+    "@react-email/preview": "^0.0.14",
+    "@react-email/render": "^2.0.4",
+    "@react-email/row": "^0.0.13",
+    "@react-email/section": "^0.0.17",
+    "@react-email/text": "^0.1.6",
     "@types/lodash": "^4.17.23",
     "axios": "^1.13.4",
     "bchaddrjs": "^0.5.2",
@@ -51,6 +66,8 @@
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-email": "^5.2.5",
+    "resend": "^6.9.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tiny-secp256k1": "^2.2.4",
